Завершили оформление карточки твита

--- a/index.html
+++ b/index.html
@@ -33,11 +33,15 @@
           </li>
           <li>
             <img src="img/retweet-icn.svg" alt="Иконка ретвита">
-            10
+            <span class="story--body--actions--item">
+              10
+            </span>
           </li>
           <li>
             <img src="img/like-icn.svg" alt="Иконка одобрения">
-            32
+            <span class="story--body--actions--item">
+              32
+            </span>
           </li>
           <li>
             <img src="img/link-icn.svg" alt="Иконка поделиться">
