--- a/index.html
+++ b/index.html
@@ -8,33 +8,33 @@
 <body>
   <main>
 
-    <header class="main--header">
+    <header class="main__header">
       <h2>Последние высказывания</h2>
       <img src="img/sort-icn.svg" alt="Иконка сортировки">
     </header>
 
     <article class="story">
-      <img class="story--user-ava" src="img/ava-vasya.jpg" alt="Фотография пользователя">
-      <div class="story--body">
-        <header class="story--body--header">
+      <img class="story__user-ava" src="img/ava-vasya.jpg" alt="Фотография пользователя">
+      <div class="story__body">
+        <header class="story__body__header">
           <h3>Василий Ночь</h3>
           <a href="#">@vasya.night</a>
           <span>11 октября</span>
         </header>
         <p>Когда вы полагаете, что именно ваш самолет разобьется, или что именно ваш проект все назовут идиотским, или что именно вас все высмеют и растопчут, вы по сути говорите себе: «Я — исключение из правила, я не такой, как все остальные; я уникальный и особенный». Это чистой воды нарциссизм. Вы полагаете, что именно ваши проблемы заслуживают особого обращения, что именно ваши проблемы уникальны и не подчиняются законам физической вселенной.</p>
-        <ul class="story--body--actions">
+        <ul class="story__body__actions">
           <li>
             <img src="img/reply-icn.svg" alt="Иконка ответа">
           </li>
           <li>
             <img src="img/retweet-icn.svg" alt="Иконка ретвита">
-            <span class="story--body--actions--item">
+            <span class="story__body__actions__item">
               10
             </span>
           </li>
           <li>
             <img src="img/like-icn.svg" alt="Иконка одобрения">
-            <span class="story--body--actions--item">
+            <span class="story__body__actions__item">
               32
             </span>
           </li>
@@ -46,27 +46,27 @@
     </article>
 
     <article class="story">
-      <img class="story--user-ava" src="img/ava-wise.png" alt="Фотография пользователя">
-      <div class="story--body">
-        <header class="story--body--header">
+      <img class="story__user-ava" src="img/ava-wise.png" alt="Фотография пользователя">
+      <div class="story__body">
+        <header class="story__body__header">
           <h3>Мудрая выдра</h3>
           <a href="#">@wisewise</a>
           <span>11 октября</span>
         </header>
         <p>Мы все переоцениваем свои навыки и стремления и недооцениваем навыки и стремления других. Большинство людей уверены, что обладают интеллектом выше среднего и лучше справляются практически со всеми задачами, — особенно если это абсолютно не так.</p>
-        <ul class="story--body--actions">
+        <ul class="story__body__actions">
           <li>
             <img src="img/reply-icn.svg" alt="Иконка ответа">
           </li>
           <li>
             <img src="img/retweet-icn.svg" alt="Иконка ретвита">
-            <span class="story--body--actions--item">
+            <span class="story__body__actions__item">
               5
             </span>
           </li>
           <li>
             <img src="img/like-icn.svg" alt="Иконка одобрения">
-            <span class="story--body--actions--item">
+            <span class="story__body__actions__item">
               17
             </span>
           </li>
@@ -78,27 +78,27 @@
     </article>
 
     <article class="story">
-      <img class="story--user-ava" src="img/ava-kkoderka.png" alt="Фотография пользователя">
-      <div class="story--body">
-        <header class="story--body--header">
+      <img class="story__user-ava" src="img/ava-kkoderka.png" alt="Фотография пользователя">
+      <div class="story__body">
+        <header class="story__body__header">
           <h3>Кккодерка</h3>
           <a href="#">@kkkoderka</a>
           <span>11 октября</span>
         </header>
         <p>Мы разрабатываем и письма, и сайты, используя одни и те же языки — HTML и CSS. Происходящее в исходном коде html-писем совсем не похоже на то, что можно увидеть в среде разработки современного фронтендера. Вам даже может показаться, что вы вернулись в веб-средневековье. </p>
-        <ul class="story--body--actions">
+        <ul class="story__body__actions">
           <li>
             <img src="img/reply-icn.svg" alt="Иконка ответа">
           </li>
           <li>
             <img src="img/retweet-icn.svg" alt="Иконка ретвита">
-            <span class="story--body--actions--item">
+            <span class="story__body__actions__item">
               1
             </span>
           </li>
           <li>
             <img src="img/like-icn.svg" alt="Иконка одобрения">
-            <span class="story--body--actions--item">
+            <span class="story__body__actions__item">
               5
             </span>
           </li>
