Добвил верстку навигации

--- a/index.html
+++ b/index.html
@@ -6,8 +6,30 @@
   <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
-  <main>
+  <nav>
+    <ul>
+      <li>
+        <div class="nav__icon nav__icon--home"></div>
+        Главная
+      </li>
+      <li>
+        <div class="nav__icon nav__icon--bell"></div>
+        Уведомления
+      </li>
+      <li>
+        <div class="nav__icon nav__icon--chat"></div>
+        Сообщения
+      </li>
+      <li>
+        <div class="nav__icon nav__icon--bookmark"></div>
+        Закладки
+      </li>
+    </ul>
 
+    <a href="#">Высказаться</a>
+  </nav>
+
+  <main>
     <header class="main__header">
       <h2>Последние высказывания</h2>
       <img src="img/sort-icn.svg" alt="Иконка сортировки">
