Добавил стили для бокового блока с друзьями

--- a/index.html
+++ b/index.html
@@ -39,46 +39,46 @@
   <aside>
     <ul>
       <li>Ваши друзья</li>
-      <li class="user">
+      <li class="aside__user">
         <img src="img/ava-katya.png" alt="Картинка пользователя">
-        <div class="user__info">
-          <div class="user__info__name">
+        <div class="aside__user__info">
+          <div class="aside__user__info__name">
             Катерина Кацман
           </div>
-          <a class="user__info__nick" href="#">
+          <a class="aside__user__info__nick" href="#">
             @katya-k
           </a>
         </div>
       </li>
-      <li class="user">
+      <li class="aside__user">
         <img src="img/ava-inna.png" alt="Картинка пользователя">
-        <div class="user__info">
-          <div class="user__info__name">
+        <div class="aside__user__info">
+          <div class="aside__user__info__name">
             Инна Берг
           </div>
-          <a class="user__info__nick" href="#">
+          <a class="aside__user__info__nick" href="#">
             @inna-b
           </a>
         </div>
       </li>
-      <li class="user">
+      <li class="aside__user">
         <img src="img/ava-dale.png" alt="Картинка пользователя">
-        <div class="user__info">
-          <div class="user__info__name">
+        <div class="aside__user__info">
+          <div class="aside__user__info__name">
             Агент Д
           </div>
-          <a class="user__info__nick" href="#">
+          <a class="aside__user__info__nick" href="#">
             @win-twin
           </a>
         </div>
       </li>
-      <li class="user">
+      <li class="aside__user">
         <img src="img/ava-platon.png" alt="Картинка пользователя">
-        <div class="user__info">
-          <div class="user__info__name">
+        <div class="aside__user__info">
+          <div class="aside__user__info__name">
             Человек в облаках
           </div>
-          <a class="user__info__nick" href="#">
+          <a class="aside__user__info__nick" href="#">
             @ilovesocrates
           </a>
         </div>
