Добавили медиа-запрос для 1024

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>ТвиТеллер</title>
   <link rel="stylesheet" href="styles/main.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
   <nav>
@@ -11,29 +12,40 @@
       <li>
         <a href="#">
           <div class="nav__menu__icon nav__menu__icon--home"></div>
-          Главная
+          <span class="nav__menu__text">Главная</span>
         </a>
       </li>
       <li>
         <a href="#">
           <div class="nav__menu__icon nav__menu__icon--bell"></div>
-          Уведомления
+          <span class="nav__menu__text">
+            Уведомления
+          </span>
         </a>
       </li>
       <li>
         <a href="#">
           <div class="nav__menu__icon nav__menu__icon--chat"></div>
-          Сообщения
+          <span class="nav__menu__text">
+            Сообщения
+          </span>
         </a>
       </li>
       <li>
         <a href="#">
           <div class="nav__menu__icon nav__menu__icon--bookmark"></div>
-          Закладки
+          <span class="nav__menu__text">
+            Закладки
+          </span>
         </a>
       </li>
     </ul>
-    <a class="nav__btn" href="#">Высказаться</a>
+    <a class="nav__btn" href="#">
+      <div class="nav__btn__icn"></div>
+      <span class="nav__btn__text">
+        Высказаться
+      </span>
+    </a>
   </nav>
 
   <aside>
